
plugins {
	id 'java'
}

repositories {
	maven {
		url = 'http://repo.runelite.net'
	}
	mavenCentral()
}

def runeLiteVersion = '1.8.10'

dependencies {
    compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
    compileOnly 'org.projectlombok:lombok:1.18.4'
    annotationProcessor 'org.projectlombok:lombok:1.18.4'

    testImplementation 'junit:junit:4.12'
    testImplementation 'org.slf4j:slf4j-simple:1.7.12'
    testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion, {
        exclude group: 'ch.qos.logback', module: 'logback-classic'
    }
}

group = 'com.flippingutilities'
version = '1.4.1'
sourceCompatibility = '1.8'

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}
